# bayrepo_neuro

./: CHANGELOG  CMakeLists.txt  README.md  bayrepo_neuro_farm.spec  labirint.c  neuro.c  neuro.h  neuro_urls.h  neuro_web.c  neuro_web_client.c  neuro_web_client.h
examples/: check_direction.c  labirint.c
examples/currency_example/: README.txt  neuro.go  neuro2.go  neuro3.go  valut.xml  valut3.xml
examples/filed_detector/: README  check.go
